docs/1.0.2/_sources/user-guide/model-gallery/spectral/plot_exp_cutoff_powerlaw_norm_spectral.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "user-guide/model-gallery/spectral/plot_exp_cutoff_powerlaw_norm_spectral.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_user-guide_model-gallery_spectral_plot_exp_cutoff_powerlaw_norm_spectral.py>`
        to download the full example code or to run this example in your browser via Binder

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_user-guide_model-gallery_spectral_plot_exp_cutoff_powerlaw_norm_spectral.py:


.. _exp-cutoff-powerlaw-norm-spectral-model:

Exponential cutoff power law norm spectral model
========================

This model parametrises a cutoff power law spectral correction with a norm parameter.

.. GENERATED FROM PYTHON SOURCE LINES 12-15

Example plot
------------
Here is an example plot of the model:

.. GENERATED FROM PYTHON SOURCE LINES 15-44

.. code-block:: python3


    from astropy import units as u
    import matplotlib.pyplot as plt
    from gammapy.modeling.models import (
        ExpCutoffPowerLawNormSpectralModel,
        ExpCutoffPowerLawSpectralModel,
        Models,
        SkyModel,
        TemplateSpectralModel,
    )

    energy_bounds = [0.1, 100] * u.TeV

    energy = [0.3, 1, 3, 10, 30] * u.TeV
    values = [40, 30, 20, 10, 1] * u.Unit("TeV-1 s-1 cm-2")
    template = TemplateSpectralModel(energy, values)
    norm = ExpCutoffPowerLawNormSpectralModel(
        norm=2,
        reference=1 * u.TeV,
    )

    template.plot(energy_bounds=energy_bounds, label="Template model")
    ecpl_norm = template * norm
    ecpl_norm.plot(
        energy_bounds, label="Template model with ExpCutoffPowerLaw norm correction"
    )
    plt.legend(loc="best")
    plt.grid(which="both")




.. image-sg:: /user-guide/model-gallery/spectral/images/sphx_glr_plot_exp_cutoff_powerlaw_norm_spectral_001.png
   :alt: plot exp cutoff powerlaw norm spectral
   :srcset: /user-guide/model-gallery/spectral/images/sphx_glr_plot_exp_cutoff_powerlaw_norm_spectral_001.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 45-48

YAML representation
-------------------
Here is an example YAML file using the model:

.. GENERATED FROM PYTHON SOURCE LINES 48-53

.. code-block:: python3


    model = SkyModel(spectral_model=ecpl_norm, name="exp-cutoff-power-law-norm-model")
    models = Models([model])

    print(models.to_yaml())




.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    components:
    -   name: exp-cutoff-power-law-norm-model
        type: SkyModel
        spectral:
            type: CompoundSpectralModel
            model1:
                type: TemplateSpectralModel
                parameters:
                -   name: norm
                    value: 1.0
                energy:
                    data:
                    - 0.3
                    - 1.0
                    - 3.0
                    - 10.0
                    - 30.0
                    unit: TeV
                values:
                    data:
                    - 40.0
                    - 30.0
                    - 20.0
                    - 10.0
                    - 1.0
                    unit: 1 / (cm2 s TeV)
            model2:
                type: ExpCutoffPowerLawNormSpectralModel
                parameters:
                -   name: index
                    value: 1.5
                -   name: norm
                    value: 2.0
                -   name: reference
                    value: 1.0
                    unit: TeV
                -   name: lambda_
                    value: 0.1
                    unit: TeV-1
                -   name: alpha
                    value: 1.0
            operator: mul






.. _sphx_glr_download_user-guide_model-gallery_spectral_plot_exp_cutoff_powerlaw_norm_spectral.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example


    .. container:: binder-badge

      .. image:: images/binder_badge_logo.svg
        :target: https://mybinder.org/v2/gh/gammapy/gammapy-webpage/v1.0.2?urlpath=lab/tree/notebooks/1.0.2/user-guide/model-gallery/spectral/plot_exp_cutoff_powerlaw_norm_spectral.ipynb
        :alt: Launch binder
        :width: 150 px



    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: plot_exp_cutoff_powerlaw_norm_spectral.py <plot_exp_cutoff_powerlaw_norm_spectral.py>`

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: plot_exp_cutoff_powerlaw_norm_spectral.ipynb <plot_exp_cutoff_powerlaw_norm_spectral.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
